<resources>
    <string name="app_name">MyAlarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="ringtone">Ringtone</string>
    <string name="alarm_type">Alarm Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarms">Alarms</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="fab_content_desc">Add Alarm</string>
    <string name="binding_failed">Binding is null</string>
    <string name="sunday_toggle">S</string>
    <string name="monday_toggle">M</string>
    <string name="tuesday_toggle">T</string>
    <string name="wednesday_toggle">W</string>
    <string name="thursday_toggle">T</string>
    <string name="friday_toggle">F</string>
    <string name="saturday_toggle">S</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>

    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>

    <string name="alarm_exists">Alarm with these options already exists</string>
    <string name="regular_description">Regular Alarm</string>
    <string name="shake_description">Shake phone to shut off Alarm</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="alarm_notificaiton_channel">alarm notificaiton channel</string>
    <string name="channel_description">channel for alarm notifications</string>
    <string name="snooze">Snooze</string>

    <string name="default_">Default</string>
    <string name="reset">Reset</string>
    <string name="turn_off">Turn Off</string>
    <string name="shake_to_disable">Shake your phone to disable alarm</string>
    <string name="display_time">%1$d:%2$02d:%3$03d</string>

    <string name="default_time">00:00:000</string>
    <string name="enable_notification_permission">MyAlarm needs permission to send notifications when alarms go off. Please enable permission to set alarms</string>
    <string name="permission_required">Permission Required</string>
    <string name="allow">Allow</string>
    <string name="permission_pref">permission preferences\n</string>
    <string name="requested_permission">requested permission</string>
    <string name="denied_twice">denied twice</string>
    <string name="image">Image</string>

</resources>