<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_alarm_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".AlarmFragment">

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/day_picker"
                layout="@layout/day_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/volume"
                android:layout_width="268dp"
                android:layout_height="42dp"
                android:thumbTint="?attr/colorTertiaryContainer"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="75sp" />

            <TextView
                android:id="@+id/select_alarm_type"
                android:layout_width="300sp"
                android:layout_height="48sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="125sp"
                android:clickable="true"
                android:elegantTextHeight="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="start|center"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:text="@string/alarm_type"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/alarm_type"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center"
                android:paddingStart="10sp"
                app:layout_anchor="@+id/select_alarm_type"
                app:layout_anchorGravity="bottom|center"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ringtone"
                android:layout_width="300sp"
                android:layout_height="48sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="195sp"
                android:clickable="true"
                android:elegantTextHeight="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="start|center"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:text="@string/ringtone"
                android:textSize="18sp"
                app:drawableEndCompat="@drawable/ic_baseline_music_note_24" />

            <TextView
                android:id="@+id/ringtone_name"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center"
                android:paddingStart="10sp"
                app:layout_anchor="@+id/ringtone"
                app:layout_anchorGravity="bottom|center"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/alarm_name"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="270sp"
                android:autofillHints="Alarm NAMe"
                android:hint="@string/alarm_name"
                android:inputType=""
                android:minHeight="48dp"
                app:hintTextColor="@color/black"
                tools:ignore="LabelFor,TextContrastCheck" />

            <Button
                android:id="@+id/create_alarm"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="350dp"
                android:text="@string/create_alarm"
                />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </ScrollView>

</LinearLayout>
